--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
 	<body>
 		<div class="container">
 			{% include "common/_menu.html.twig" %}
+            {% include "common/_messages.html.twig" %}
 			{% block body %}{% endblock %}
 		</div>
 	</body>
