++ crear nota con validacion form

--- a/templates/common/_menu.html.twig
+++ b/templates/common/_menu.html.twig
@@ -12,6 +12,10 @@
         <li class="nav-item">
           <a class="nav-link active" href="{{path("app_table", {'filas':5, 'cols':3})}}">TableController</a>
         </li>
+
+          <li class="nav-item">
+          <a class="nav-link active" href="{{path("app_nota_new_form")}}">Crear nota</a>
+        </li>
         
       </ul>
     
